--- a/pom.xml
+++ b/pom.xml
@@ -5,7 +5,7 @@
     <modelVersion>4.0.0</modelVersion>
 
     <groupId>ch.heigvd.dai</groupId>
-    <artifactId>untitled</artifactId>
+    <artifactId>pictures-cli-editor</artifactId>
     <version>1.0-SNAPSHOT</version>
 
     <properties>
